--- a/couldhtml/login.html
+++ b/couldhtml/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Login page</title>
@@ -89,4 +89,91 @@
       log("platform is verified: " + window.djiBridge.platformIsVerified());
     </script>
   </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>DJI Cloud API Test</title>
+  <style>
+    .button-row { display: flex; justify-content: space-between; margin-bottom:1em; }
+    button { flex:1; margin:0 5px; }
+    #logs { list-style:none; padding:0; font-family:monospace; }
+  </style>
+</head>
+<body>
+  <h1>DJI Cloud API Test</h1>
+  <div class="button-row">
+    <button id="login-button">Login</button>
+    <button id="logout-button">Logout</button>
+    <button id="report-button">Report</button>
+  </div>
+  <ul id="logs"></ul>
+  <script>
+    const HOST = "hostnamehere";      // プレースホルダ置換
+    const USER = "userloginhere";
+    const PASS = "userpasswordhere";
+
+    const APP_ID  = 130943;
+    const APP_KEY = "36de02838593125bbe9ab32d08813fb";
+    const LICENSE = "HdMDWuYVpt05j3pIk+/vqoJlfY+SP6vp7z6XDyzGeM0d+Oy4JavUyYP/VsOw5i0UE07Lt5q9rzk9Jex1+CnPQO7OzBE6XwcNwZ0pDP/LPTjqdSPRezbmRB8z5yNf5QbEhe1YyLh++JzW9mr9BCkXy1v1h2+Uo0S1MSRZcLgLRw0=";
+
+    const logs = document.getElementById("logs");
+    function log(msg) {
+      const li = document.createElement("li");
+      li.textContent = msg;
+      logs.appendChild(li);
+    }
+
+    async function fetchToken() {
+      const res = await fetch(`http://${HOST}:5000/auth/token`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username: USER, password: PASS })
+      });
+      if (!res.ok) throw new Error("Token fetch failed: " + res.status);
+      return (await res.json()).access_token;
+    }
+
+    document.getElementById("login-button").addEventListener("click", async () => {
+      try {
+        log("Login開始");
+        const token = await fetchToken();
+        log("取得トークン: " + token);
+
+        log("platformVerifyLicense 実行");
+        window.djiBridge.platformVerifyLicense(APP_ID, APP_KEY, LICENSE);
+        log("platformIsVerified: " + window.djiBridge.platformIsVerified());
+
+        const params = JSON.stringify({
+          host:    `tcp://${HOST}:1883`,
+          connectCallback: "onConnect",
+          username: USER,
+          password: token
+        });
+        log("platformLoadComponent: " + window.djiBridge.platformLoadComponent("thing", params));
+        log("thingConnect: " + window.djiBridge.thingConnect(USER, token, "onConnect"));
+        log("初期接続状態: " + window.djiBridge.thingGetConnectState());
+      } catch (e) {
+        log(e.message);
+      }
+    });
+
+    document.getElementById("logout-button").addEventListener("click", () => {
+      log("platformUnloadComponent: " + window.djiBridge.platformUnloadComponent("thing"));
+    });
+
+    document.getElementById("report-button").addEventListener("click", () => {
+      log("isLoaded: " + window.djiBridge.platformIsComponentLoaded("thing") +
+          ", state: " + window.djiBridge.thingGetConnectState());
+    });
+
+    function onConnect(code, msg) { log(`onConnect コールバック code=${code}, msg=${msg}`); }
+    window.onConnect = onConnect;
+
+    log("ページロード完了");
+  </script>
+</body>
 </html>
